Fixed header margins on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -202,6 +202,7 @@ button {
     flex-direction: column;
     align-items: center;
     gap: 10px;
+    margin-top: 10px;
   }
 
   #navbar {
